--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 					<h2>CONTACT</h2>
                     <p>
                         <i class="fa fa-envelope" aria-hidden="true"></i>
-                        <a href="mailto:fyattani@gmail.com">fyattani@gmail.com</a>
+                        <a href="mailto:fyattani@gmail.com">Fatuma Yattani</a>
                     </p>
                     <p>
                         <i class="fab fa-github" aria-hidden="true"></i>
@@ -72,7 +72,7 @@
                     <br>
                     <a href="https://fatumayattani.github.io/image-search-engine/">Image Search Engine</a>
                     <br>
-                    <a href="https://jscriptmusicplayer.netlify.app/">Javascript Music Player</a>
+                    <a href="https://jscriptmusicplayer.netlify.app/">Music Player</a>
                     <br>
                     <a href="https://qrcodegenerator25.netlify.app/">QR Code Generator Application</a>
                     <br>
